Fix alignment of icon in Notice (#10543)

--- a/src/amo/components/Notice/styles.scss
+++ b/src/amo/components/Notice/styles.scss
@@ -41,7 +41,7 @@
 .Notice-icon,
 .Notice-dismisser-button {
   height: 16px;
-  margin: 4px;
+  margin: 7px;
   width: 16px;
 }
 
